Resolves: tdf#146395 allow newlines in QR Codes

Change-Id: Ib390d97866ab013770e4f1cbdfb529296d64c140
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/143811
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>